--- a/diseño.css
+++ b/diseño.css
@@ -17,6 +17,11 @@ header {
 
 }
 
+.instagram {
+    width: 50px;
+
+}
+
 .navbar__logo {
     display: flex;
     justify-content: left;
@@ -44,6 +49,16 @@ header {
     gap: 35px;
 
 }
+
+.navbar__menu__list__item__link {
+    display: flex;
+    flex-direction: row;
+    align-items: center;
+    font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+    text-transform: uppercase;
+
+}
+
 
 .navbar__menu__list__item {
     list-style: none;
