--- a/diseño.css
+++ b/diseño.css
@@ -57,6 +57,12 @@ header {
     font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
     text-transform: uppercase;
 
+
+}
+
+.navbar__menu__list__item__link:hover {
+    text-decoration: underline;
+    color: black;
 }
 
 
