--- a/diseño.css
+++ b/diseño.css
@@ -2,7 +2,7 @@
 
 /* Estilo para el encabezado y la navegación */
 header {
-    background-color: #bda55d;
+    background-color: #1d1705;
     background-size: 50px;
     padding: 10px;
 
@@ -56,13 +56,12 @@ header {
     align-items: center;
     font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
     text-transform: uppercase;
-
-
+    color: #e6dbac;
 }
 
 .navbar__menu__list__item__link:hover {
     text-decoration: underline;
-    color: black;
+    color: #e6dbac;
 }
 
 
