--- a/diseño.css
+++ b/diseño.css
@@ -2,19 +2,22 @@
 
 /* Estilo para el encabezado y la navegación */
 header {
-    background-color: #1d1705;
-    background-size: 50px;
+    background-color: #aee;
+    background-image: url(pega.jpg);
     padding: 10px;
-
-    align-items: center;
-    height: 100px;
-
+    height: 13em;
+    margin-bottom: 150px;
+    margin-top: none;
+    box-shadow: 6px 2px 10px rgb(0, 0, 0)
 }
 
-.logo {
-    height: 100px;
+body {
+    margin: 0px;
+}
 
-
+a .logo {
+    height: 250px;
+    margin-left: 80px;
 }
 
 .instagram {
@@ -24,31 +27,32 @@ header {
 
 .navbar__logo {
     display: flex;
-    justify-content: left;
-    margin-left: 0px;
+    justify-content: center;
+
 }
 
 .navbar {
-    display: flex;
-    flex-direction: row;
     justify-content: space-between;
+    display: flex;
+
 }
 
 .navbar__menu {
-    margin-right: 0px;
     display: flex;
     align-items: center;
-    justify-content: space-between;
+    text-decoration: none;
+
 }
 
 .navbar__menu__list {
     display: flex;
     flex-direction: row;
     list-style: none;
-    justify-content: space-between;
-    gap: 35px;
+    justify-content: center;
+    gap: 70px;
 
 }
+
 
 .navbar__menu__list__item__link {
     display: flex;
@@ -56,19 +60,34 @@ header {
     align-items: center;
     font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
     text-transform: uppercase;
-    color: #e6dbac;
+    color: #000000;
 }
 
 .navbar__menu__list__item__link:hover {
-    text-decoration: underline;
-    color: #e6dbac;
+    color: #000000;
+    border-bottom: solid 2px;
+    padding-bottom: 5px;
+
+
+}
+
+#ig .navbar__menu:hover {
+    border-bottom: none;
 }
 
 
 .navbar__menu__list__item {
     list-style: none;
     display: flex;
-    justify-content: center;
+    justify-content: row;
+}
+
+.titles a {
+    text-decoration: none;
+    text-align: center;
+    margin-top: 15px;
+    border: 1px;
+
 }
 
 /* nav {
