--- a/diseño.css
+++ b/diseño.css
@@ -2,14 +2,14 @@
 
 /* Estilo para el encabezado y la navegación */
 header {
-    background-color: #aee;
-    background-image: url(pega.jpg);
+
+    background-image: url(fondo\ strawberry.jpg);
     padding: 10px;
-    height: 13em;
-    margin-bottom: 150px;
-    margin-top: none;
+    margin-bottom: 4px;
+    background-size: cover;
     box-shadow: 6px 2px 10px rgb(0, 0, 0)
 }
+
 
 body {
     margin: 0px;
@@ -18,11 +18,20 @@ body {
 a .logo {
     height: 250px;
     margin-left: 80px;
+
+
 }
 
 .instagram {
-    width: 50px;
+    width: 30px;
+    padding-top: 10px;
+    transition: all 300ms;
+    padding-right: 30px;
 
+}
+
+.instagram:hover {
+    transform: scale(1.15);
 }
 
 .navbar__logo {
@@ -42,6 +51,7 @@ a .logo {
     align-items: center;
     text-decoration: none;
 
+
 }
 
 .navbar__menu__list {
@@ -51,22 +61,29 @@ a .logo {
     justify-content: center;
     gap: 70px;
 
+
 }
 
+@font-face {
+    font-family: 'Geometria-BoldItalic';
+    src: url('fonts/Geometria-BoldItalic.ttf') format('truetype');
+    color: white;
+}
 
 .navbar__menu__list__item__link {
     display: flex;
     flex-direction: row;
     align-items: center;
-    font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
-    text-transform: uppercase;
-    color: #000000;
+    transition: all 300ms;
+    font-family: 'Geometria-BoldItalic'
+
 }
 
 .navbar__menu__list__item__link:hover {
     color: #000000;
     border-bottom: solid 2px;
     padding-bottom: 5px;
+    transform: scale(1.15);
 
 
 }
@@ -82,12 +99,13 @@ a .logo {
     justify-content: row;
 }
 
+
+
 .titles a {
     text-decoration: none;
     text-align: center;
     margin-top: 15px;
     border: 1px;
-
 }
 
 /* nav {
